--- a/ExcelTester/ExcelTester.csproj
+++ b/ExcelTester/ExcelTester.csproj
@@ -22,6 +22,9 @@
     <None Update="Templates\台電轉供費用_請付款單範本.xlsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Templates\憑證中心憑證費用_請付款單範本.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
