--- a/ExcelTester/ExcelTester.csproj
+++ b/ExcelTester/ExcelTester.csproj
@@ -19,6 +19,12 @@
     <None Update="Templates\Report_Template.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Templates\台汽綠能_電業公司_付款通知範本.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Templates\台汽綠能_電業公司_請付款單範本.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Templates\台電轉供費用_請付款單範本.xlsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
